fixed flex wrap

--- a/main.css
+++ b/main.css
@@ -36,13 +36,12 @@ background-color:darkblue;
 border: 2px solid black;
 background-color: grey;
 display: flex;
-flex-basis: 0;
-width: 100%;
-height: 100%;
 flex-wrap: wrap;
+padding: 10px;
 
 }
 
 .history{
     border: 2px solid black;
 }
+
